Bug 1907936: Correctly implement RoundHalfToEven in ClampDoubleToUint8. r=jandem

There are various ways how to implement half-to-even rounding, this C++
implementation was choosen because it's easy to translate into assembly
instructions.

- Update the x86 implementation to use half-to-even rounding when available.
- Use a single unified implementation for ARM32, because I didn't want to
  spend time trying to make sense of the `HasVFPv3` code path which uses
  fixed floating point values.
- ARM64 doesn't need any changes, because it was already using `Fcvtns`, which
  implements half-to-even rounding.

Differential Revision: https://phabricator.services.mozilla.com/D216577